<resources>
    <string name="app_name">KeyMod</string>
    <string name="settings_title">Settings</string>
    <string name="settings_tab_general">General</string>
    <string name="settings_tab_voice">Voice</string>
    <string name="settings_tab_ai">AI</string>
    <string name="settings_tab_history">History</string>
    <string name="nav_welcome_guide">Welcome &amp; Guide</string>
    <string name="nav_welcome_guide_content_description">Welcome screen, mode picker, and tutorial</string>
    <string name="launch_panel_welcome_prefix">Welcome to</string>
    <string name="launch_panel_subtitle">Turn Your Phone into a Smart Keyboard</string>
    <string name="launch_panel_land_subtitle">Turn Your Phone into a Smart Keyboard</string>
    <string name="launch_panel_credit">Learn more at openterface.com
by TechxArtisan</string>
    <string name="show_tutorial_link">Show tutorial</string>
    <string name="launch_panel_remember_choice">Remember and auto-enter this mode</string>
    <string name="launch_panel_start">Start</string>
    <string name="launch_panel_skip">Skip for now</string>
    <string name="PrtSc">PrtSc</string>
    <string name="ScrLk">ScrLk</string>
    <string name="Pause">Pause</string>
    <string name="Ins">Ins</string>
    <string name="Home">Home</string>
    <string name="PgUp">PgUp</string>
    <string name="Delete">DEL</string>
    <string name="End">End</string>
    <string name="PgDn">PgDn</string>
    <string name="Function1">F1</string>
    <string name="Function2">F2</string>
    <string name="Function3">F3</string>
    <string name="Function4">F4</string>
    <string name="Function5">F5</string>
    <string name="Function6">F6</string>
    <string name="Function7">F7</string>
    <string name="Function8">F8</string>
    <string name="Function9">F9</string>
    <string name="Function10">F10</string>
    <string name="Function11">F11</string>
    <string name="Function12">F12</string>
    <string name="One_Sigh_Button">!\n1</string>
    <string name="Two_At_Button">@\n2</string>
    <string name="Three_Pound_Button">#\n3</string>
    <string name="Four_Dollar_Button">$\n4</string>
    <string name="Five_Percent_Button">%\n5</string>
    <string name="Six_Caret_Button">^\n6</string>
    <string name="Seven_Ampersand_Button">&amp;\n7</string>
    <string name="Eight_Asterisk_Button">*\n8</string>
    <string name="Nine_Left_Parenthesis_Button">(\n9</string>
    <string name="Zero_Right_Parenthesis_Button">)\n0</string>
    <string name="Tilde">~\n`</string>
    <string name="Minus_Sign_Button">_\n-</string>
    <string name="Plus_Sign_Button">+\n=</string>
    <string name="Left_Bracket_Button">{\n[</string>
    <string name="Right_Bracket_Button">}\n]</string>
    <string name="Colon_Button">:\n;</string>
    <string name="Quotation_Button">\""\n'</string>
    <string name="Bitwise_OR_Button">|\n\\</string>
    <string name="Less_Sign_Button">&lt;\n,</string>
    <string name="Greater_Sign_Button">&gt;\n.</string>
    <string name="Question_Mark">\?\n/</string>
    <string name="Q_Button">Q</string>
    <string name="W_Button">W</string>
    <string name="E_Button">E</string>
    <string name="R_Button">R</string>
    <string name="T_Button">T</string>
    <string name="Y_Button">Y</string>
    <string name="U_Button">U</string>
    <string name="I_Button">I</string>
    <string name="O_Button">O</string>
    <string name="P_Button">P</string>
    <string name="A_Button">A</string>
    <string name="S_Button">S</string>
    <string name="D_Button">D</string>
    <string name="F_Button">F</string>
    <string name="G_Button">G</string>
    <string name="H_Button">H</string>
    <string name="J_Button">J</string>
    <string name="K_Button">K</string>
    <string name="L_Button">L</string>
    <string name="Z_Button">Z</string>
    <string name="X_Button">X</string>
    <string name="C_Button">C</string>
    <string name="V_Button">V</string>
    <string name="B_Button">B</string>
    <string name="N_Button">N</string>
    <string name="M_Button">M</string>
    <string name="q_Button">q</string>
    <string name="w_Button">w</string>
    <string name="e_Button">e</string>
    <string name="r_Button">r</string>
    <string name="t_Button">t</string>
    <string name="y_Button">y</string>
    <string name="u_Button">u</string>
    <string name="i_Button">i</string>
    <string name="o_Button">o</string>
    <string name="p_Button">p</string>
    <string name="a_Button">a</string>
    <string name="s_Button">s</string>
    <string name="d_Button">d</string>
    <string name="f_Button">f</string>
    <string name="g_Button">g</string>
    <string name="h_Button">h</string>
    <string name="j_Button">j</string>
    <string name="k_Button">k</string>
    <string name="l_Button">l</string>
    <string name="z_Button">z</string>
    <string name="x_Button">x</string>
    <string name="c_Button">c</string>
    <string name="v_Button">v</string>
    <string name="b_Button">b</string>
    <string name="n_Button">n</string>
    <string name="m_Button">m</string>
    <string name="Esc">Esc</string>
    <string name="TAB">TAB</string>
    <string name="Caps">Caps</string>
    <string name="Shift">Shift</string>
    <string name="Ctrl">Ctrl</string>
    <string name="Alt">Alt</string>
    <string name="Win">Win</string>
    <string name="Cmd">Cmd</string>
    <string name="Super">Super</string>
    <string name="modifier_control">Ctrl</string>
    <string name="modifier_option">Opt</string>
    <string name="modifier_command">Cmd</string>
    <string name="modifier_ctrl">CTRL</string>
    <string name="modifier_alt">ALT</string>
    <string name="modifier_win">WIN</string>
    <string name="modifier_sup">SUP</string>
    <string name="Fn">Fn</string>
    <string name="Symbols_123">\?123</string>
    <string name="BackSpace">BackSpace</string>
    <string name="DEL_Button">DEL</string>
    <string name="Space_Button">Space</string>
    <string name="Enter_Button">Enter</string>
    <string name="Up_arrow">Up_arrow</string>
    <string name="Down_arrow">Down_arrow</string>
    <string name="Left_arrow">Left_arrow</string>
    <string name="Right_arrow">Right_arrow</string>
    <string name="Q_Button_Upper">Q</string>
    <string name="W_Button_Upper">W</string>
    <string name="E_Button_Upper">E</string>
    <string name="R_Button_Upper">R</string>
    <string name="T_Button_Upper">T</string>
    <string name="Y_Button_Upper">Y</string>
    <string name="U_Button_Upper">U</string>
    <string name="I_Button_Upper">I</string>
    <string name="O_Button_Upper">O</string>
    <string name="P_Button_Upper">P</string>
    <string name="A_Button_Upper">A</string>
    <string name="S_Button_Upper">S</string>
    <string name="D_Button_Upper">D</string>
    <string name="F_Button_Upper">F</string>
    <string name="G_Button_Upper">G</string>
    <string name="H_Button_Upper">H</string>
    <string name="J_Button_Upper">J</string>
    <string name="K_Button_Upper">K</string>
    <string name="L_Button_Upper">L</string>
    <string name="Z_Button_Upper">Z</string>
    <string name="X_Button_Upper">X</string>
    <string name="C_Button_Upper">C</string>
    <string name="V_Button_Upper">V</string>
    <string name="B_Button_Upper">B</string>
    <string name="N_Button_Upper">N</string>
    <string name="M_Button_Upper">M</string>
    <string name="Symbol">Sym</string>
    <string name="KeyBoard_Ctrl_Add_C">Ctrl+C\nCopy</string>
    <string name="KeyBoard_Ctrl_Add_V">Ctrl+V\nPaste</string>
    <string name="KeyBoard_Ctrl_Add_A">Ctrl+A\nSelect All</string>
    <string name="KeyBoard_Ctrl_Add_X">Ctrl+X\nCut</string>
    <string name="KeyBoard_Ctrl_Add_Z">Ctrl+Z\nRevocation</string>
    <string name="KeyBoard_Ctrl_Add_S">Ctrl+S\nSave</string>
    <string name="KeyBoard_Win_Add_Tab">Win+Tab\nTask View</string>
    <string name="KeyBoard_Win_Add_S">Win+S\nSearch</string>
    <string name="KeyBoard_Win_Add_E">Win+E\nExplorer</string>
    <string name="KeyBoard_Win_Add_R">Win+R\nCommand</string>
    <string name="KeyBoard_Win_Add_D">Win+D\nDesktop</string>
    <string name="KeyBoard_Win_Add_L">Win+L\nLock PC</string>
    <string name="KeyBoard_Alt_Add_F4">Alt+F4\nClose Window</string>
    <string name="KeyBoard_Ctrl_Add_Alt_Add_Del">Ctrl+Alt+Del\nTask Manager</string>
    <string name="KeyBoard_Alt_Add_PrtScr">Alt+PrtScr\nWindow Screenshot</string>
    <string-array name="planets_array">
        <item>Touchpad + Keyboard</item>
        <item>Full KeyBoard</item>
    </string-array>
    <string name="usbConnect">UsbConnect</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="KeyBoard">KeyBoard</string>
    <string name="Mouse">Mouse</string>
    <string name="CompositeMode">Composite Mode</string>
    <string name="Instructions">Instructions</string>
    <string name="About">About</string>
    <string name="ShortCut">ShortCut</string>
    <string name="connection_title">Device Connection</string>
    <string name="connection_type">Connection Type</string>
    <string name="connection_status">Connection Status</string>
    <string name="usb_connection">USB Connection</string>
    <string name="bluetooth_connection">Bluetooth Connection</string>
    <string name="not_connected">Not Connected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting...</string>
    <string name="auto_connect_on_startup">Auto-connect on startup</string>
    <string name="last_connected_none">No previous connection</string>
    <string name="last_connected_usb">Last connected: USB</string>
    <string name="last_connected_bluetooth">Last connected: %s</string>
    <string name="close">Close</string>
    <string name="connection">Connection</string>
    <string name="menu">Menu</string>
    <string name="bluetooth_settings_title">Bluetooth Settings</string>
    <string name="scan_for_devices">Scan for Devices</string>
    <string name="bluetooth_on_off">Bluetooth On/Off</string>
    <string name="bluetooth_card_tap_hint">Tap to manage</string>
    <string name="bluetooth_status_connected_with_hint">%1$s\n%2$s</string>
    <string name="bt_paired_actions_hint">Tap a paired device to connect or disconnect. Long-press to forget.</string>
    <string name="bt_disconnect_confirm_title">Disconnect</string>
    <string name="bt_disconnect_confirm_message">Disconnect from \"%1$s\"?\nYou can reconnect from this list.</string>
    <string name="bt_forget_device_title">Forget device</string>
    <string name="bt_forget_device_message">Forget \"%1$s\" (%2$s)?\n\nIt will no longer appear in the paired list.</string>
    <string name="bt_forget_confirm">Forget</string>
    <string name="bt_disconnect_confirm">Disconnect</string>
    <string name="bt_device_forgotten_toast">Device forgotten: %1$s</string>
    <string name="bt_disconnected_toast">Disconnected: %1$s</string>
    <string name="mode_keyboard">Keyboard Mode</string>
    <string name="mode_mouse">Mouse Mode</string>
    <string name="mode_composite">Keyboard + Mouse Mode</string>
    <string name="mode_selection">Mode Selection</string>
    <string name="keyboard_mode">Keyboard Only</string>
    <string name="mouse_mode">Mouse Only</string>
    <string name="composite_mode">Keyboard + Mouse</string>
    <string name="mode_info">Select your preferred input mode</string>
    <string name="compose_ascii_warning">Non-ASCII characters are not supported for HID send. Remove them to enable Send.</string>
    <string name="compose_clear">Clear</string>
    <string name="compose_undo">Undo</string>
    <string name="compose_touchpad">Touchpad</string>
    <string name="target_os_macos">macOS</string>
    <string name="target_os_windows">Windows</string>
    <string name="target_os_linux">Linux</string>
</resources>