<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:keyWidth="10%p"
    android:horizontalGap="0px"
    android:verticalGap="0px"
    android:keyHeight="10%p">

    <Row>
        <Key android:codes="27" android:keyLabel="@string/PrtSc"/>
        <Key android:codes="49" android:keyLabel="@string/ScrLk"/>
        <Key android:codes="50" android:keyLabel="@string/Pause"/>
        <Key android:codes="51" android:keyLabel="@string/Ins" android:horizontalGap="1%p"/>
        <Key android:codes="52" android:keyLabel="@string/Home"/>
        <Key android:codes="53" android:keyLabel="@string/PgUp"/>
        <Key android:codes="54" android:keyLabel="@string/Delete" android:horizontalGap="1%p"/>
        <Key android:codes="55" android:keyLabel="@string/End"/>
        <Key android:codes="56" android:keyLabel="@string/PgDn"/>
    </Row>

    <Row>
        <Key android:codes="27" android:keyLabel="@string/Esc"/>
        <Key android:codes="49" android:keyLabel="@string/Function1" android:horizontalGap="0.5%p"/>
        <Key android:codes="50" android:keyLabel="@string/Function2"/>
        <Key android:codes="51" android:keyLabel="@string/Function3"/>
        <Key android:codes="52" android:keyLabel="@string/Function4"/>
        <Key android:codes="53" android:keyLabel="@string/Function5" android:horizontalGap="0.5%p"/>
        <Key android:codes="54" android:keyLabel="@string/Function6"/>
        <Key android:codes="55" android:keyLabel="@string/Function7"/>
        <Key android:codes="56" android:keyLabel="@string/Function8"/>
        <Key android:codes="57" android:keyLabel="@string/Function9" android:horizontalGap="0.5%p"/>
        <Key android:codes="48" android:keyLabel="@string/Function10"/>
        <Key android:codes="48" android:keyLabel="@string/Function11"/>
        <Key android:codes="48" android:keyLabel="@string/Function12"/>
    </Row>

    <Row>
        <Key android:codes="192" android:keyLabel="@string/Tilde_Button"/>
        <Key android:codes="49" android:keyLabel="@string/One_Button"/>
        <Key android:codes="50" android:keyLabel="@string/Two_Button"/>
        <Key android:codes="51" android:keyLabel="@string/Three_Button"/>
        <Key android:codes="52" android:keyLabel="@string/Four_Button"/>
        <Key android:codes="53" android:keyLabel="@string/Five_Button"/>
        <Key android:codes="54" android:keyLabel="@string/Six_Button"/>
        <Key android:codes="55" android:keyLabel="@string/Seven_Button"/>
        <Key android:codes="56" android:keyLabel="@string/Eight_Button"/>
        <Key android:codes="57" android:keyLabel="@string/Nine_Button"/>
        <Key android:codes="48" android:keyLabel="@string/Zero_Button"/>
        <Key android:codes="189" android:keyLabel="@string/Minus_Sign_Button"/>
        <Key android:codes="187" android:keyLabel="@string/Plus_Sign_Button"/>
        <Key android:codes="8" android:keyLabel="@string/BackSpace" android:isRepeatable="true" android:keyWidth="15%p" />
    </Row>
    <Row android:verticalGap="1%p">
        <Key android:codes="9" android:keyLabel="@string/TAB" android:keyWidth="15%p"/>
        <Key android:codes="113" android:keyLabel="@string/Q_Button" />
        <Key android:codes="119" android:keyLabel="@string/W_Button" />
        <Key android:codes="101" android:keyLabel="@string/E_Button" />
        <Key android:codes="114" android:keyLabel="@string/R_Button" />
        <Key android:codes="116" android:keyLabel="@string/T_Button" />
        <Key android:codes="121" android:keyLabel="@string/Y_Button" />
        <Key android:codes="117" android:keyLabel="@string/U_Button" />
        <Key android:codes="105" android:keyLabel="@string/I_Button" />
        <Key android:codes="111" android:keyLabel="@string/O_Button" />
        <Key android:codes="112" android:keyLabel="@string/P_Button" />
        <Key android:codes="219" android:keyLabel="@string/Left_Bracket_Button" />
        <Key android:codes="221" android:keyLabel="@string/Right_Bracket_Button" />
        <Key android:codes="220" android:keyLabel="@string/Bitwise_OR_Button"/>
    </Row>

    <Row>
        <Key android:codes="20" android:keyLabel="@string/Caps" android:keyWidth="15%p" />
        <Key android:codes="97" android:keyLabel="@string/A_Button" />
        <Key android:codes="115" android:keyLabel="@string/S_Button" />
        <Key android:codes="100" android:keyLabel="@string/D_Button" />
        <Key android:codes="102" android:keyLabel="@string/F_Button" />
        <Key android:codes="103" android:keyLabel="@string/G_Button" />
        <Key android:codes="104" android:keyLabel="@string/H_Button" />
        <Key android:codes="106" android:keyLabel="@string/J_Button" />
        <Key android:codes="107" android:keyLabel="@string/K_Button" />
        <Key android:codes="108" android:keyLabel="@string/L_Button" />
        <Key android:codes="220" android:keyLabel="@string/Colon_Button"/>
        <Key android:codes="220" android:keyLabel="@string/Quotation_Button"/>
        <Key android:codes="13" android:keyLabel="@string/Enter_Button" android:keyWidth="15%p" />
    </Row>
    <Row>
        <Key android:codes="16" android:keyLabel="@string/Shift" android:keyWidth="15%p" />
        <Key android:codes="122" android:keyLabel="@string/Z_Button" />
        <Key android:codes="120" android:keyLabel="@string/X_Button" />
        <Key android:codes="99" android:keyLabel="@string/C_Button" />
        <Key android:codes="118" android:keyLabel="@string/V_Button" />
        <Key android:codes="98" android:keyLabel="@string/B_Button" />
        <Key android:codes="110" android:keyLabel="@string/N_Button" />
        <Key android:codes="109" android:keyLabel="@string/M_Button" />
        <Key android:codes="188" android:keyLabel="@string/Less_Sign_Button"/>
        <Key android:codes="190" android:keyLabel="@string/Greater_Sign_Button"/>
        <Key android:codes="191" android:keyLabel="@string/Question_Mark"/>
        <Key android:codes="16" android:keyLabel="@string/Shift" android:keyWidth="15%p" />
    </Row>
    <Row>
        <Key android:codes="17" android:keyLabel="@string/Ctrl" android:keyWidth="10%p" />
        <Key android:codes="91" android:keyLabel="@string/Win" android:keyWidth="10%p"/>
        <Key android:codes="18" android:keyLabel="@string/Alt" android:keyWidth="10%p" />
        <Key android:codes="32" android:keyLabel="@string/Space_Button" android:keyWidth="30%p" />
        <Key android:codes="18" android:keyLabel="@string/Alt" android:keyWidth="10%p" />
        <Key android:codes="91" android:keyLabel="@string/Win" android:keyWidth="10%p"/>
        <Key android:codes="93" android:keyLabel="@string/Fn" android:keyWidth="10%p" />
        <Key android:codes="17" android:keyLabel="@string/Ctrl" android:keyWidth="10%p" />
    </Row>
</Keyboard>