<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:keyWidth="10%p"
    android:horizontalGap="0px"
    android:verticalGap="0px"
    android:keyHeight="10%p">

    <Row>
        <Key android:codes="1E" android:keyLabel="1" custom:keySymbolLabel="!"/>
        <Key android:codes="1F" android:keyLabel="2" custom:keySymbolLabel="@"/>
        <Key android:codes="20" android:keyLabel="3" custom:keySymbolLabel="#"/>
        <Key android:codes="21" android:keyLabel="4" custom:keySymbolLabel="$"/>
        <Key android:codes="22" android:keyLabel="5" custom:keySymbolLabel="%"/>
        <Key android:codes="23" android:keyLabel="6" custom:keySymbolLabel="^"/>
        <Key android:codes="24" android:keyLabel="7" custom:keySymbolLabel="&amp;"/>
        <Key android:codes="25" android:keyLabel="8" custom:keySymbolLabel="*"/>
        <Key android:codes="26" android:keyLabel="9" custom:keySymbolLabel="("/>
        <Key android:codes="27" android:keyLabel="0" custom:keySymbolLabel=")"/>
    </Row>

    <Row>
        <Key android:codes="14" android:keyLabel="q" custom:keySymbolLabel="Q"/>
        <Key android:codes="1A" android:keyLabel="w" custom:keySymbolLabel="W"/>
        <Key android:codes="08" android:keyLabel="e" custom:keySymbolLabel="E"/>
        <Key android:codes="15" android:keyLabel="r" custom:keySymbolLabel="R"/>
        <Key android:codes="17" android:keyLabel="t" custom:keySymbolLabel="T"/>
        <Key android:codes="1C" android:keyLabel="y" custom:keySymbolLabel="Y"/>
        <Key android:codes="18" android:keyLabel="u" custom:keySymbolLabel="U"/>
        <Key android:codes="0C" android:keyLabel="i" custom:keySymbolLabel="I"/>
        <Key android:codes="12" android:keyLabel="o" custom:keySymbolLabel="O"/>
        <Key android:codes="13" android:keyLabel="p" custom:keySymbolLabel="P"/>
    </Row>

    <Row>
        <Key android:codes="04" android:keyLabel="a" custom:keySymbolLabel="A"/>
        <Key android:codes="16" android:keyLabel="s" custom:keySymbolLabel="S"/>
        <Key android:codes="07" android:keyLabel="d" custom:keySymbolLabel="D"/>
        <Key android:codes="09" android:keyLabel="f" custom:keySymbolLabel="F"/>
        <Key android:codes="0A" android:keyLabel="g" custom:keySymbolLabel="G"/>
        <Key android:codes="0B" android:keyLabel="h" custom:keySymbolLabel="H"/>
        <Key android:codes="0D" android:keyLabel="j" custom:keySymbolLabel="J"/>
        <Key android:codes="0E" android:keyLabel="k" custom:keySymbolLabel="K"/>
        <Key android:codes="0F" android:keyLabel="l" custom:keySymbolLabel="L"/>
        <Key android:codes="2A" android:keyLabel="@string/BackSpace" android:isRepeatable="true"/>
    </Row>

    <Row>
        <Key android:codes="E1" android:keyLabel="@string/Shift" android:keyWidth="15%p"/>
        <Key android:codes="1D" android:keyLabel="z" custom:keySymbolLabel="Z"/>
        <Key android:codes="1B" android:keyLabel="x" custom:keySymbolLabel="X"/>
        <Key android:codes="06" android:keyLabel="c" custom:keySymbolLabel="C"/>
        <Key android:codes="19" android:keyLabel="v" custom:keySymbolLabel="V"/>
        <Key android:codes="05" android:keyLabel="b" custom:keySymbolLabel="B"/>
        <Key android:codes="11" android:keyLabel="n" custom:keySymbolLabel="N"/>
        <Key android:codes="10" android:keyLabel="m" custom:keySymbolLabel="M"/>
        <Key android:codes="38" android:keyLabel="/" custom:keySymbolLabel="&#63;" android:keyWidth="15%p"/>
    </Row>

    <Row>
        <Key android:codes="F001" android:keyLabel="@string/Symbols_123" android:keyWidth="15%p"/>
        <Key android:codes="36" android:keyLabel="," custom:keySymbolLabel="&lt;" android:keyWidth="10%p"/>
        <Key android:codes="E3" android:keyLabel="@string/Win" android:keyWidth="10%p"/>
        <Key android:codes="2C" android:keyLabel="@string/Space_Button" android:keyWidth="40%p"/>
        <Key android:codes="37" android:keyLabel="." custom:keySymbolLabel="&gt;" android:keyWidth="10%p"/>
        <Key android:codes="28" android:keyLabel="@string/Enter_Button" android:keyWidth="15%p"/>
    </Row>
</Keyboard>
